Fix dropdown text align

--- a/src/common/styles/App.styl
+++ b/src/common/styles/App.styl
@@ -94,7 +94,7 @@ body {
   right auto !important
 
   &-menu
-    text-align: right
+    text-align: right !important
 
 .ant-select-dropdown-menu
   padding: 0
